# Student-Management

./: CMakeLists.txt  backend.cpp  backend.h  pro.cpp  readme.md  students.json  ui_main.cpp
